# ambient-code

./: CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  audit_stderr.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: LIVE_PROBE_REPORT.md  MODEL_TUNING.md  RELEASING.md  STRESS_TEST_PLAN.md
hooks/: session-start.sh
tests/: __init__.py  catalog.json  test_ambient.py  test_ambient_features.py  test_ambient_map.py  test_ambient_v10_receipt_remediation.py  test_ambient_v11_phase7.py  test_ambient_v11_quality.py  test_ambient_v12_phase7_remediation.py  test_ambient_v12_quality_fixes.py  test_ambient_v13_phase7_codex.py  test_ambient_v13_phase7_round2.py  test_ambient_v13_quality_fixes2.py  test_ambient_v14_phase8a.py  test_ambient_v14_telemetry.py  test_ambient_v15_phase8b1.py  test_ambient_v16_phase8b2.py  test_ambient_v17_capstone.py  test_ambient_v17_spend_gating.py  test_ambient_v18_fallback_fanout.py  test_ambient_v19_fb_reserve.py  test_ambient_v2.py  test_ambient_v20_adaptive.py  test_ambient_v20_same_model_mr_fb.py  test_ambient_v21_polish.py  test_ambient_v21_prose_recovery.py  test_ambient_v22_build_adaptive.py  test_ambient_v23_tripwire.py  test_ambient_v24_stdin_dash.py  test_ambient_v25_polish.py  test_ambient_v26_prod_hardening.py  test_ambient_v27_build_jsonl.py  test_ambient_v27_features.py  test_ambient_v29_link_marketplace.py  test_ambient_v3.py  test_ambient_v30_settings_command.py  test_ambient_v3_reduce_fixes.py  test_ambient_v3_remediation.py  test_ambient_v3_routing.py  test_ambient_v4_fleet.py  (+9 more)
(+5 files in other folders)
